adding icons to toprow

--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="http://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+  </head>
+  <body>
     <div class="headerSectiomn">
+      <div class="topRow">
+        <div class="leftSection">
+          <img src="assets/menu-svgrepo-com.svg" alt="menu" class="icon" />
 
+          <div class="iconContainer">
+            <img
+              src="assets/youtube-svgrepo-com.svg"
+              alt=""
+              class="icon_youtube"
+            />
+            <div class="iconText">YouTube</div>
+            <div class="iconCountryCode">EE</div>
+          </div>
+        </div>
+        <div class="centerSection">
+          <img src="assets/search.png" alt="" class="search">
+        </div>
+    
+        <div class="rightSection">Right</div>
+      </div>
+      <div class="tagsRow">Tags</div>
     </div>
-    <div class="mainContent"></div>
-</body>
+    <div class="mainContent">
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure possimus ullam alias obcaecati temporibus libero repudiandae, expedita similique labore id laudantium, porro perspiciatis doloremque doloribus nisi error adipisci commodi quos laboriosam suscipit recusandae, nam quasi! Consequatur quos beatae qui magnam ducimus, a eligendi omnis aliquam et fugit, quaerat animi ipsam id asperiores sunt earum excepturi pariatur porro, laudantium illum dolorem magni? Eaque natus nostrum dignissimos praesentium, cumque dolorem necessitatibus magni quia reiciendis expedita quam libero nobis dolores illum eos quo suscipit voluptas? Saepe unde eius tempora consectetur labore numquam, maiores officiis qui cumque molestiae! Dolores aliquam, cupiditate saepe ullam quos laboriosam eius soluta nam corrupti? Quisquam adipisci et impedit ipsam eum, est quibusdam, enim rem corrupti minima ullam reprehenderit odio totam doloribus magni molestias. Facilis fugit repudiandae neque officiis in eveniet veniam rerum, dolorum quam animi quia fuga quasi quis, molestias minima veritatis? Adipisci, autem beatae? Rerum architecto est repudiandae a adipisci provident minus iste voluptatibus fuga. Ex dolorum itaque aliquam blanditiis minima incidunt! Earum eos fugit temporibus enim voluptatibus, natus quo ad molestias consectetur labore perferendis vitae nihil aliquam necessitatibus aut magni quasi impedit! A reprehenderit id illo molestiae quae fuga quam quaerat deserunt modi voluptatibus ipsum delectus eum impedit sequi quas aliquid debitis harum ex, consectetur ratione fugiat iusto? Qui distinctio quisquam modi nisi velit libero saepe voluptatem. Dicta corrupti saepe autem placeat nulla sequi tempora, perspiciatis, earum at eius, doloremque non aliquam pariatur! Ea beatae nemo sapiente dignissimos perferendis inventore aut quo. Laborum minus eius assumenda mollitia soluta doloremque rerum? Dolorum consequuntur dicta hic eum sequi unde vel maxime, consequatur eaque autem odio. Distinctio quas reprehenderit possimus pariatur blanditiis, quis ratione asperiores molestias dolorem corrupti itaque consectetur iste, aut eos magni dolor placeat excepturi porro. Voluptatibus molestias tempore nesciunt sunt molestiae eligendi nam illum repellat, modi, facilis dignissimos doloribus! Sed in repellat sunt optio voluptatibus quo! Atque autem vel vitae, consectetur aut doloribus quas eius necessitatibus excepturi modi accusantium numquam similique. Ut aspernatur dolor laborum eaque. Eius necessitatibus consectetur exercitationem explicabo. Alias velit mollitia, nesciunt accusantium a, cumque perspiciatis earum iusto, aut nostrum ut ex esse. Laborum voluptatibus ab facere maxime? Recusandae natus omnis ea et quas, modi consequatur consectetur? Sunt unde, ea non rerum, accusantium quam fugiat nesciunt ab commodi eveniet doloribus! Eveniet quia, dignissimos impedit voluptatibus necessitatibus delectus atque. Eaque, quae reprehenderit! Assumenda odit provident velit natus optio cum iusto dicta repudiandae est maxime harum, perspiciatis earum laudantium aliquam quod quos error nihil deserunt cumque atque nobis officia sequi. Nemo esse perspiciatis sed eligendi placeat perferendis cum quos. Laboriosam deserunt alias cum necessitatibus tenetur quam officiis debitis accusamus itaque vitae rem, maxime quae obcaecati ea eum dolorem similique voluptate deleniti voluptatem eaque sed! Magni accusamus laboriosam aliquid placeat? Velit, aliquid optio nihil at, aspernatur fuga odio ex nemo omnis minima sapiente cum unde. Quod cumque necessitatibus mollitia magni eius, quasi ipsum itaque accusamus voluptates non sapiente enim iusto in culpa reiciendis! Asperiores praesentium ipsum fuga nihil dolorum sunt velit, eveniet mollitia expedita corporis pariatur provident tempore excepturi tenetur perspiciatis temporibus corrupti soluta? Exercitationem sapiente officia expedita autem, iusto quibusdam nesciunt explicabo blanditiis quia possimus velit necessitatibus ea aut qui excepturi ab molestias, et ducimus inventore, architecto vel maxime dignissimos! Hic sit quod quas eligendi dignissimos quam voluptatem, adipisci ipsum nulla enim explicabo ducimus architecto repellendus, officiis, at eum laudantium praesentium cupiditate. Minus nobis voluptatibus sequi rem hic similique aliquam quo odio impedit. Libero aspernatur, dolorem exercitationem sit illo corporis saepe, minus fugiat explicabo placeat eum eaque? Deserunt quibusdam ex modi ratione doloremque praesentium voluptatibus laborum eveniet voluptates, officia tempore, sed obcaecati fuga totam consectetur maxime id, necessitatibus laudantium? Adipisci laudantium possimus velit, facilis pariatur, tempore omnis, similique aut obcaecati unde alias consectetur voluptatum corporis aperiam eveniet quae molestias saepe provident amet. Dolorem magni voluptate, minima enim eum dolorum, dolor earum consequuntur repellendus deserunt illo id, totam vero omnis in beatae blanditiis. Voluptate laudantium libero sequi accusamus veniam ab dolorum soluta laboriosam aperiam exercitationem sunt, sint quasi blanditiis excepturi eveniet officiis nobis voluptas incidunt! Sit adipisci quisquam fugiat qui dolore nostrum nulla vitae laborum beatae nisi delectus neque, optio illum id natus doloribus rerum maiores. Blanditiis quis sed obcaecati vel! Suscipit tempora, placeat perspiciatis quia sint maiores aperiam, quos, modi enim harum maxime temporibus nesciunt obcaecati consequuntur libero consectetur. Dolorum maiores hic quod inventore fugit? Aperiam sit corrupti excepturi mollitia delectus, temporibus voluptatum corporis sequi dolorem distinctio voluptates inventore iure maiores maxime deserunt totam animi odio, iste veritatis. Perspiciatis, pariatur nihil qui cumque doloremque aspernatur quos tenetur repellendus excepturi ut fuga dicta tempore accusamus. Est sapiente provident impedit ipsum sit quae nisi voluptatum quisquam unde. Quam tenetur saepe natus, excepturi laudantium labore praesentium ducimus iste quaerat illo autem totam dicta, velit neque nobis corporis in debitis magni sequi cum veritatis distinctio repellendus delectus nesciunt? Error id quia ipsam odit praesentium repellendus, aliquam ipsa architecto illo porro alias, aperiam deserunt. Consequuntur sit eos rerum laborum unde natus nobis aut vitae ex, sunt nam exercitationem! Quod obcaecati eos suscipit quas accusamus delectus ut, tempore repellendus fugit rerum nam architecto unde, aspernatur alias vero. Enim a ipsum voluptas quasi quas dicta! Reiciendis molestias molestiae in, ea impedit ullam aperiam suscipit vel, voluptatibus minima fugit maiores blanditiis iste ad illo a voluptatem? Et incidunt voluptatibus provident unde, reprehenderit aut ullam doloribus dolores nisi optio dicta quae labore vero quos exercitationem necessitatibus voluptatum recusandae! Quaerat fugiat error quae aliquid odio neque, iure nam aperiam dolor. Minima nobis dignissimos inventore in repellendus consequuntur, consectetur, nesciunt commodi sint ea perferendis nemo laboriosam quas ducimus corporis dolore fugiat recusandae omnis. Aperiam ad possimus facere tempora ipsam exercitationem iure vero laudantium nemo mollitia, libero quidem id quibusdam totam eos at enim. Molestiae repellendus repudiandae rerum officia praesentium exercitationem quisquam id dolorem magni? Sequi fugiat earum et soluta eum voluptas omnis vel ipsa eaque id libero labore at necessitatibus culpa consectetur, nostrum unde excepturi mollitia odit. Debitis exercitationem amet harum, officia eum accusantium corrupti eveniet. Nesciunt asperiores nam deserunt soluta harum ab ex error enim reprehenderit!
+    </div>
+  </body>
 </html>
